--- a/MVCVidly/Views/Movies/Random.cshtml
+++ b/MVCVidly/Views/Movies/Random.cshtml
@@ -6,5 +6,13 @@
     ViewBag.Title = "Random Movie";
 }
 
-
+@*1) the best way; this model refere to what we passed via argument in view method*@
+@*the description about why we use Model in this case wrote on Random Method in Movie controller*@
 <h2>@Model.Name</h2>
+
+
+@*2) Fragile aproach - error prone - using the viewData Dicteonary*@
+@*<h2>@( ((Movie) ViewData["Movie"]).Name)</h2>*@
+
+@*3) Fragile aproach - error prone - using the ViewBag Dicteonary*@
+@*<h2>@( ((Movie) ViewBag.Movie).Name)</h2>*@
