--- a/MVCVidly/Views/Movies/Random.cshtml
+++ b/MVCVidly/Views/Movies/Random.cshtml
@@ -1,18 +1,40 @@
 ﻿@*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
-@model MVCVidly.Models.Movie
+@model MVCVidly.ViewModels.RandomMovieViewModel
 @{
     ViewBag.Title = "Random Movie";
 }
 
 @*1) the best way; this model refere to what we passed via argument in view method*@
 @*the description about why we use Model in this case wrote on Random Method in Movie controller*@
-<h2>@Model.Name</h2>
-
+<h2>@Model.Movie.Name</h2>
+<h2>@Model.Customers[0].Name</h2>
 
 @*2) Fragile aproach - error prone - using the viewData Dicteonary*@
 @*<h2>@( ((Movie) ViewData["Movie"]).Name)</h2>*@
 
 @*3) Fragile aproach - error prone - using the ViewBag Dicteonary*@
 @*<h2>@( ((Movie) ViewBag.Movie).Name)</h2>*@
+
+
+
+@{
+    var CustomerNum = Model.Customers.Count;
+
+    var className = CustomerNum > 5 ? "popular" : null;
+
+    <h2 class = @className>@Model.Movie.Name</h2>
+
+    if (0 == CustomerNum)
+    {
+        <h3>This movie has not rented before!</h3>
+    }
+}
+
+@{
+    foreach (var customer in Model.Customers)
+    {
+        <h3>@customer.Name</h3>
+    }
+}
